--- a/roboshop/frontend.yml
+++ b/roboshop/frontend.yml
@@ -4,5 +4,5 @@ metadata:
   name: frontend
 spec:
   containers:
-    - name: nginx
-      image: nginx
+    - name: frontend
+      image: 191164592803.dkr.ecr.us-east-1.amazonaws.com/frontend:2.0.0
