--- a/roboshop/cart.yml
+++ b/roboshop/cart.yml
@@ -5,9 +5,14 @@ metadata:
   labels:
     component: cart
 spec:
+  serviceAccountName: cart
   containers:
     - name: cart
       image: 191164592803.dkr.ecr.us-east-1.amazonaws.com/cart:2.0.0
+  initContainers:
+    - name: aws-ssm-param-store
+      image: 191164592803.dkr.ecr.us-east-1.amazonaws.com/aws-ssm-param-store:2.0.0
+      args: ["sample:dev.docdb.pass"]
 
 ---
 
@@ -22,3 +27,14 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 8080
+
+---
+
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: cart
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::191164592803:role/ssm-for-eks
+spec:
+  serviceAccountName: cart
