--- a/roboshop/cart.yml
+++ b/roboshop/cart.yml
@@ -21,7 +21,7 @@ spec:
   initContainers:
     - name: aws-ssm-param-store
       image: 191164592803.dkr.ecr.us-east-1.amazonaws.com/aws-ssm-param-store:2.0.0
-      args: ["sample:dev.docdb.pass"]
+      #args: ["sample:dev.docdb.pass"]
 
 ---
 
