Added Exit Status to script

--- a/roboshop/cart.yml
+++ b/roboshop/cart.yml
@@ -18,10 +18,20 @@ spec:
   containers:
     - name: cart
       image: 191164592803.dkr.ecr.us-east-1.amazonaws.com/cart:2.0.0
+      volumeMounts:
+        - mountPath: /params
+          name: params
   initContainers:
     - name: aws-ssm-param-store
       image: 191164592803.dkr.ecr.us-east-1.amazonaws.com/aws-ssm-param-store:2.0.0
-      #args: ["sample:dev.docdb.pass"]
+      args: ["sample:dev.docdb.pass"]
+      volumeMounts:
+        - mountPath: /params
+          name: params
+  volumes:
+    - name: params
+      emptyDir:
+        sizeLimit: 100Mi
 
 ---
 
