--- a/roboshop/catalogue.yml
+++ b/roboshop/catalogue.yml
@@ -1,13 +1,37 @@
 apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: catalogue
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::191164592803:role/ssm-for-eks
+
+---
+
+apiVersion: v1
 kind: Pod
 metadata:
   name: catalogue
   labels:
     component: catalogue
 spec:
+  serviceAccountName: catalogue
   containers:
-    - name: catalogue
+    - name: cart
       image: 191164592803.dkr.ecr.us-east-1.amazonaws.com/catalogue:2.0.0
+      volumeMounts:
+        - mountPath: /params
+          name: params
+  initContainers:
+    - name: aws-ssm-param-store
+      image: 191164592803.dkr.ecr.us-east-1.amazonaws.com/aws-ssm-param-store:2.0.0
+      args: ["DOCUMENTDB:prod.catalogue.mongo"]
+      volumeMounts:
+        - mountPath: /params
+          name: params
+  volumes:
+    - name: params
+      emptyDir:
+        sizeLimit: 100Mi
 
 ---
 
