--- a/roboshop/catalogue.yml
+++ b/roboshop/catalogue.yml
@@ -16,7 +16,7 @@ metadata:
 spec:
   serviceAccountName: catalogue
   containers:
-    - name: cart
+    - name: catalogue
       image: 191164592803.dkr.ecr.us-east-1.amazonaws.com/catalogue:2.0.0
       volumeMounts:
         - mountPath: /params
